@@ -31,11 +31,58 @@
 ##     length(agrep(built, run)) > 0
 ## }
 
+## If we want this it would be better to factor out the core of checkConflicts.
+## searchConflicts <- function(pkg) {
+##     vars <- getNamespaceExports(pkg)
+##     conflicts <- function(pos) intersect(vars, ls(pos, all = TRUE))
+##     val <- Filter(length, sapply(search()[-1], conflicts))
+##     if (length(val)) val else NULL
+## }
+
+conflictRules <-
+    local({
+        data <- new.env()
+        function(pkg, mask.ok = NULL, exclude = NULL) {
+            if ((! missing(mask.ok)) || (! missing(exclude)))
+                assign(pkg, list(mask.ok = mask.ok, exclude = exclude),
+                       envir = data)
+            else if (exists(pkg, envir = data, inherits = FALSE))
+                get(pkg, envir = data, inherits = FALSE)
+            else NULL
+        }
+    })
+
 library <-
 function(package, help, pos = 2, lib.loc = NULL, character.only = FALSE,
-         logical.return = FALSE, warn.conflicts = TRUE,
-	 quietly = FALSE, verbose = getOption("verbose"))
+         logical.return = FALSE, warn.conflicts,
+	 quietly = FALSE, verbose = getOption("verbose"),
+         mask.ok, exclude, include.only,
+         attach.required = missing(include.only))
 {
+    conf.ctrl <- getOption("conflicts.policy")
+    if (is.character(conf.ctrl))
+        conf.ctrl <-
+            switch(conf.ctrl,
+                   strict = list(error = TRUE, warn = FALSE),
+                   depends.ok = list(error = TRUE,
+                                     generics.ok = TRUE,
+                                     can.mask = c("base", "methods", "utils",
+                                                  "grDevices", "graphics",
+                                                  "stats"),
+                                     depends.ok = TRUE),
+                   warning(gettextf("unknown conflict policy: %s",
+                                    sQuote(conf.ctrl)),
+                           call. = FALSE, domain = NA))
+    if (! is.list(conf.ctrl))
+        conf.ctrl <- NULL
+    stopOnConflict <- isTRUE(conf.ctrl$error)
+
+    if (missing(warn.conflicts))
+        warn.conflicts <- if (isFALSE(conf.ctrl$warn)) FALSE else TRUE
+    if ((! missing(include.only)) && (! missing(exclude)))
+        stop(gettext("only one of 'include.only' and 'exclude' can be used"),
+             call. = FALSE, domain = NA)
+
     testRversion <- function(pkgInfo, pkgname, pkgpath)
     {
         if(is.null(built <- pkgInfo$Built))
@@ -142,9 +189,11 @@ function(package, help, pos = 2, lib.loc = NULL, character.only = FALSE,
             gen <- gen[from != package]
             ob <- ob[!(ob %in% gen)]
         }
-        fst <- TRUE
+
 	ipos <- seq_along(sp)[-c(lib.pos,
 				 match(c("Autoloads", "CheckExEnv"), sp, 0L))]
+        cpos <- NULL
+        conflicts <- vector("list", 0)
         for (i in ipos) {
             obj.same <- match(names(as.environment(i)), ob, nomatch = 0L)
             if (any(obj.same > 0)) {
@@ -170,15 +219,58 @@ function(package, help, pos = 2, lib.loc = NULL, character.only = FALSE,
 		if(length(same) && identical(sp[i], "package:base"))
 		    same <- same[not.Ident(same, ignore.environment = TRUE)]
                 if(length(same)) {
-                    if (fst) {
-                        fst <- FALSE
-                        packageStartupMessage(gettextf("\nAttaching package: %s\n",
-                                                       sQuote(package)),
-                                              domain = NA)
+                    conflicts[[sp[i]]] <- same
+                    cpos[sp[i]] <- i
+                }
+            }
+        }
+        if (length(conflicts)) {
+            if (stopOnConflict) {
+                emsg <- ""
+                pkg <- names(conflicts)
+                notOK <- vector("list", 0)
+                for (i in seq_along(conflicts)) {
+                    pkgname <- sub("^package:", "", pkg[i])
+                    if (pkgname %in% canMaskEnv$canMask)
+                        next
+                    same <- conflicts[[i]]
+                    if (is.list(mask.ok))
+                        myMaskOK <- mask.ok[[pkgname]]
+                    else myMaskOK <- mask.ok
+
+                    ## adjust 'same' for conflict resolution specifications
+                    if (isTRUE(myMaskOK))
+                        same <- NULL
+                    else if (is.character(myMaskOK))
+                        same <- setdiff(same, myMaskOK)
+
+                    if (length(same)) {
+                        notOK[[pkg[i]]] <- same
+                        msg <- .maskedMsg(sort(same), pkg = sQuote(pkg[i]),
+                                          by = cpos[i] < lib.pos)
+                        emsg <- paste(emsg, msg, sep = "\n")
                     }
-		    msg <- .maskedMsg(sort(same), pkg = sQuote(sp[i]),
-                                      by = i < lib.pos)
-		    packageStartupMessage(msg, domain = NA)
+                }
+                if (length(notOK)) {
+                    msg <- gettextf("Conflicts attaching package %s:\n%s",
+                                    sQuote(package),
+                                    emsg)
+                    stop(errorCondition(msg,
+                                        package = package,
+                                        conflicts = conflicts,
+                                        class = "packageConflictError"))
+                }
+            }
+            if (warn.conflicts) {
+                ## Use separate messages to preserve previous behavior.
+                packageStartupMessage(gettextf("\nAttaching package: %s\n",
+                                               sQuote(package)), domain = NA)
+                pkg <- names(conflicts)
+                for (i in seq_along(conflicts)) {
+                    msg <- .maskedMsg(sort(conflicts[[i]]),
+                                      pkg = sQuote(pkg[i]),
+                                      by = cpos[i] < lib.pos)
+                    packageStartupMessage(msg, domain = NA)
                 }
             }
         }
@@ -245,8 +337,29 @@ function(package, help, pos = 2, lib.loc = NULL, character.only = FALSE,
                     pos <- 2
                 } else pos <- npos
             }
-            .getRequiredPackages2(pkgInfo, quietly = quietly)
+
             deps <- unique(names(pkgInfo$Depends))
+            depsOK <- isTRUE(conf.ctrl$depends.ok)
+            if (depsOK) {
+                canMaskEnv <- dynGet("__library_can_mask__", NULL)
+                if (is.null(canMaskEnv)) {
+                    canMaskEnv <- new.env()
+                    canMaskEnv$canMask <- union("base", conf.ctrl$can.mask)
+                    "__library_can_mask__" <- canMaskEnv
+                }
+                canMaskEnv$canMask <- unique(c(package, deps,
+                                               canMaskEnv$canMask))
+            }
+            else canMaskEnv <- NULL
+
+            if (attach.required)
+                .getRequiredPackages2(pkgInfo, quietly = quietly)
+
+            cr <- conflictRules(package)
+            if (missing(mask.ok))
+                mask.ok <- cr$mask.ok
+            if (missing(exclude))
+                exclude <- cr$exclude
 
             ## If the namespace mechanism is available and the package
             ## has a namespace, then the namespace loading mechanism
@@ -272,7 +385,8 @@ function(package, help, pos = 2, lib.loc = NULL, character.only = FALSE,
 		tt <- tryCatch({
                     attr(package, "LibPath") <- which.lib.loc
                     ns <- loadNamespace(package, lib.loc)
-                    env <- attachNamespace(ns, pos = pos, deps)
+                    env <- attachNamespace(ns, pos = pos, deps,
+                                           exclude, include.only)
 		}, error = function(e) {
 		    P <- if(!is.null(cc <- conditionCall(e)))
 			     paste(" in", deparse(cc)[1L]) else ""
@@ -292,8 +406,13 @@ function(package, help, pos = 2, lib.loc = NULL, character.only = FALSE,
                     ## depend on methods
                     nogenerics <-
                         !.isMethodsDispatchOn() || checkNoGenerics(env, package)
-                    if(warn.conflicts && # never will with a namespace
-                       !exists(".conflicts.OK", envir = env, inherits = FALSE))
+                    if (isFALSE(conf.ctrl$generics.ok) ||
+                        (stopOnConflict && ! isTRUE(conf.ctrl$generics.ok)))
+                        nogenerics <- TRUE ## no silent masking for genrics
+                    if(stopOnConflict ||
+                       (warn.conflicts && # never will with a namespace
+                        !exists(".conflicts.OK", envir = env,
+                                inherits = FALSE)))
                         checkConflicts(package, pkgname, pkgpath,
                                        nogenerics, ns)
                     on.exit()
@@ -561,8 +680,9 @@ function(chname, libpath, verbose = getOption("verbose"),
 }
 
 require <-
-function(package, lib.loc = NULL, quietly = FALSE, warn.conflicts = TRUE,
-         character.only = FALSE)
+function(package, lib.loc = NULL, quietly = FALSE, warn.conflicts,
+         character.only = FALSE, mask.ok, exclude, include.only,
+         attach.required = missing(include.only))
 {
     if(!character.only)
         package <- as.character(substitute(package)) # allowing "require(eda)"
@@ -576,7 +696,11 @@ function(package, lib.loc = NULL, quietly = FALSE, warn.conflicts = TRUE,
                                   character.only = TRUE,
                                   logical.return = TRUE,
                                   warn.conflicts = warn.conflicts,
-				  quietly = quietly),
+				  quietly = quietly,
+                                  mask.ok = mask.ok,
+                                  exclude = exclude,
+                                  include.only = include.only,
+                                  attach.required = attach.required),
                           error = function(e) e)
         if (inherits(value, "error")) {
             if (!quietly) {
